--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,19 +13,17 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container d-flex align-center justify-content-between">
     <a class="navbar-brand" href="/">E-COMMERCE</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div>
+    <div *ngIf="menuType === 'DEFAULT'">
       <input class="form-control" type="search" placeholder="Search">
     </div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mb-2 mb-lg-0">
+    <div [ngSwitch]="menuType" class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul *ngSwitchCase="'DEFAULT'" class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Home</a>
         </li>
@@ -49,6 +47,22 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li> -->
+      </ul>
+
+
+      <ul *ngSwitchCase="'SELLER'" class="navbar-nav mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">Product List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/seller-auth">Add Product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cart">Seller Name</a>
+        </li>
       </ul>
     </div>
   </div>
