--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -49,7 +49,6 @@
           </li> -->
       </ul>
 
-
       <ul *ngSwitchCase="'SELLER'" class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Product List</a>
@@ -58,7 +57,7 @@
           <a class="nav-link" routerLink="/seller-auth">Add Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/login">Logout</a>
+          <a class="nav-link" (click)="logout()">Logout</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart">Seller Name</a>
