--- a/src/app/components/seller-home/seller-home.component.html
+++ b/src/app/components/seller-home/seller-home.component.html
@@ -1,1 +1,26 @@
-<p>seller-home works!</p>
+<div class="product-list container p-5">
+    <h1 class="text-center mb-3">Product List</h1>
+    <table class="table table-striped border">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Color</th>
+                <th>Category</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of productList">
+                <td><img class="w-25" src="{{item.imgUrl}}"
+                        alt="product image"></td>
+                <td>{{item.name}}</td>
+                <td>{{item.price}}</td>
+                <td>{{item.color}}</td>
+                <td>{{item.category}}</td>
+                <td>{{item.description}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
