--- a/src/app/components/seller-home/seller-home.component.html
+++ b/src/app/components/seller-home/seller-home.component.html
@@ -15,18 +15,21 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of productList">
-                <td><img class="w-25" src="{{item.imgUrl}}" alt="product image"></td>
+                <td><img class="w-25" src="{{item.imgUrl}}"
+                        alt="product image"></td>
                 <td>{{item.name}}</td>
                 <td>{{item.price}}</td>
                 <td>{{item.color}}</td>
                 <td>{{item.category}}</td>
                 <td>{{item.description}}</td>
                 <td>
-                    <a class="color-primary me-2" routerLink="/seller-update-product/{{item.id}}">
+                    <a class="color-primary me-2"
+                        routerLink="/seller-update-product/{{item.id}}">
                         <fa-icon [icon]="updateIcon"></fa-icon>
                     </a>
                     <span class="color-danger" style="cursor: pointer;">
-                        <fa-icon [icon]="deleteIcon" (click)="deleteProduct(item.id);"></fa-icon>
+                        <fa-icon [icon]="deleteIcon"
+                            (click)="deleteProduct(item.id);"></fa-icon>
                     </span>
                 </td>
             </tr>
