--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="d-flex flex-column min-vh-100">
+  <app-header></app-header>
+  <div class="flex-grow-1">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
