--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,10 +1,29 @@
-<div class="row">
-  <div class="col-sm-3">
-    <img src alt>
+<div class="container my-4">
+  @if(searchResult){
+  <div class="row shadow my-3 p-3"
+    *ngFor="let item of searchResult">
+    <div class="col-xl-2 col-md-3 col-6">
+      <a routerLink="/details/{{item.id}}" class="text-decoration-none">
+        <img src="{{item.imgUrl}}" alt="Product_Image"
+          style="width: 90%;">
+      </a>
+    </div>
+    <div class="col-xl-10 col-md-9 col-6">
+      <h6>
+        <a routerLink="/details/{{item.id}}"
+          class="text-decoration-none h5">{{item.name}}</a>
+      </h6>
+      <p><b>Price: {{item.price | currency:'INR'}}</b></p>
+      <p>
+        <span>Color: {{item.color}}</span>
+        <span>Category: {{item.category}}</span>
+      </p>
+      <p>{{item.description}}</p>
+    </div>
   </div>
-  <div class="col-sm-8">
-    <h6>Product Name</h6>
-    <p><b>Price: 50000</b></p>
-    <p><span>Color: Red</span></p>
+  }@else{
+  <div>
+    NO DATA FOUND
   </div>
+  }
 </div>
