--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <app-header></app-header>
   <div class="flex-grow-1">
     <router-outlet></router-outlet>
+    <ng-toast [style]="{width: '300px'}"></ng-toast>
   </div>
   <app-footer></app-footer>
 </div>
