--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -2,7 +2,8 @@
   @if(productDetails){
   <div class="row">
     <div class="col-5">
-      <img src="{{productDetails.imgUrl}}" alt="Product_Image" class="col-xl-10 col-12">
+      <img src="{{productDetails.imgUrl}}" alt="Product_Image"
+        class="col-xl-10 col-12">
     </div>
     <div class="col-7">
       <div class="ps-3">
@@ -18,16 +19,20 @@
         <h6 class="mb-xl-4 mb-3">Description:
           {{productDetails.description}}</h6>
         <div class="mb-xl-4 mb-3">
-          <button class="btn btn-primary text-white me-1 mb-1" style="border-radius: 0;" (click)="handleAddToCart()">Add
+          <button class="btn btn-primary text-white me-1 mb-1"
+            style="border-radius: 0;" (click)="handleAddToCart()">Add
             to Cart</button>
-          <button class="btn btn-success text-white mb-1" style="border-radius: 0;">Buy
+          <button class="btn btn-success text-white mb-1"
+            style="border-radius: 0;">Buy
             Now</button>
         </div>
         <div class="d-flex">
           <button class="btn btn-secondary me-1" (click)="handleQuantity('min')"
             style="width: 40px; height: 40px;">-</button>
-          <input type="number" class="text-center px-1" style="width: 50px;" value="{{productQuantity}}">
-          <button class="btn btn-secondary ms-1" (click)="handleQuantity('plus')"
+          <input type="number" class="text-center px-1" style="width: 50px;"
+            value="{{productQuantity}}">
+          <button class="btn btn-secondary ms-1"
+            (click)="handleQuantity('plus')"
             style="width: 40px; height: 40px;">+</button>
         </div>
       </div>
