--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -24,7 +24,11 @@
   list-style-type: none;
   margin-bottom: 20px;
   border-bottom: 1px solid #ddd;
-  padding-bottom: 15px;
+  padding: 15px 0;
+}
+
+.cart .details ul li {
+  width: 20%;
 }
 
 .cart .summary {
@@ -44,4 +48,15 @@
 .summary ul li {
   display: flex;
   justify-content: space-between;
+}
+
+.cart .btn-remove-cart {
+  padding: 7px 15px;
+}
+
+.cart .btn-checkout {
+  margin-top: 20px;
+  width: 50%;
+  width: 100%;
+  padding: 7px 0;
 }
