--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer bg-secondary text-center py-2">
-  <p class="text-white m-0">copyrigth all rights reserved</p>
+  <p class="text-white m-0">&copy; copyrigth all rights reserved</p>
 </div>
