--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,3 +1,4 @@
+@if (priceSummary.total > 0) {
 <div class="cart">
   <h1>Cart</h1>
   <div class="row col-12">
@@ -19,7 +20,8 @@
           <span>Total: {{item.productTotalPrice}}</span>
         </li>
         <li>
-          <button class="btn-remove-cart">Remove From Cart</button>
+          <button class="btn-remove-cart"
+            (click)="handleRemoveFromCart(item.id)">Remove From Cart</button>
         </li>
       </ul>
     </div>
@@ -46,9 +48,12 @@
           <span><h4>Total</h4></span>
           <span><h4>{{priceSummary.total | currency:'INR'}}</h4></span>
         </li>
-        <button class="btn-cart btn-checkout"
+        <button *ngIf="priceSummary.total > 0" class="btn-cart btn-checkout"
           (click)="handleCheckout()">Checkout</button>
       </ul>
     </div>
   </div>
 </div>
+}@else {
+<h3 style="text-align: center; margin-top: 100px;">Cart is Empty</h3>
+}
